Restructured flow and function of Program. Added functionalities including file saving and file type detection.