@@ -1,15 +1,13 @@
 package crypto;
 
 import javax.swing.*;
-import java.io.File;
-import java.io.FileNotFoundException;
-import java.io.FileWriter;
-import java.io.IOException;
-import java.io.UnsupportedEncodingException;
+import java.io.*;
 import java.math.BigInteger;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.nio.file.StandardOpenOption;
 import java.util.InputMismatchException;
 import java.util.Scanner;
 
@@ -83,8 +81,9 @@ public class Program {
 			try {
 				File file = chooser.getSelectedFile();
 
-				String fileString = Files.readString(Paths.get(file.getAbsolutePath()));
-				ba = fileString.getBytes();
+				//String fileString = Files.readString(Paths.get(file.getAbsolutePath()));
+				ba = Files.readAllBytes(Paths.get(file.getAbsolutePath()));
+				//ba = fileString.getBytes();
 
 				fileAccepted = true;
 			} catch (IOException e) {
@@ -93,6 +92,72 @@ public class Program {
 			}
 		}
 		return ba;
+	}
+
+	private static void saveFile(byte[] ba, Scanner input) {
+		boolean fileWritten = false;
+		while (!fileWritten) {
+			try {
+
+				System.out.println();
+				System.out.print("Please enter the file save location: ");
+				String filePath = Paths.get(input.nextLine()).toString();
+
+				// Identify file type and append the extension to the path.
+				// https://en.wikipedia.org/wiki/List_of_file_signatures
+
+				if ( ba.length < 4 ) { // The file is too short to be anything too meaningful other than probably a couple characters.
+					filePath += ".txt";
+				} else if ( String.format("%02X", ba[0]).equals("FF") && String.format("%02X", ba[1]).equals("D8") ) { // jpeg
+					filePath += ".jpg";
+				} else if ( String.format("%02X", ba[0]).equals("1F") && ( String.format("%02X", ba[1]).equals("9D") || String.format("%02X", ba[1]).equals("A0") ) ) { // .tar.z
+					filePath += ".tar.z";
+				} else if ( String.format("%02X", ba[0]).equals("4D") && String.format("%02X", ba[1]).equals("5A") ) { // exe, dll, and more but most likely exe
+					filePath += ".exe";
+				} else if ( String.format("%02X", ba[0]).equals("50") && String.format("%02X", ba[1]).equals("4B") ) { // zip
+					filePath += ".zip";
+				} else if ( String.format("%02X", ba[0]).equals("52") && String.format("%02X", ba[1]).equals("61") ) { // rar
+					filePath += ".rar";
+				} else if ( String.format("%02X", ba[0]).equals("7F") && String.format("%02X", ba[1]).equals("45") ) { // .elf
+					filePath += ".elf";
+				} else if ( String.format("%02X", ba[0]).equals("89") && String.format("%02X", ba[1]).equals("50") ) { // .png
+					filePath += ".png";
+				} else if ( String.format("%02X", ba[0]).equals("25") && String.format("%02X", ba[1]).equals("50") ) { // .pdf
+					filePath += ".pdf";
+				} else if ( String.format("%02X", ba[0]).equals("52") && String.format("%02X", ba[1]).equals("49") ) { // This could be like 6 different things but for my purposes .wav is most likely
+					filePath += ".elf";
+				} else if ( String.format("%02X", ba[0]).equals("49") && String.format("%02X", ba[1]).equals("44") ) { // .mp3
+					filePath += ".mp3";
+				} else if ( String.format("%02X", ba[0]).equals("D0") && String.format("%02X", ba[1]).equals("CF") ) { // .doc / .xls
+					filePath += ".doc";
+				} else if ( String.format("%02X", ba[0]).equals("75") && String.format("%02X", ba[1]).equals("73") ) { // .tar
+					filePath += ".tar";
+				} else if ( String.format("%02X", ba[0]).equals("37") && String.format("%02X", ba[1]).equals("7A") ) { // .7z
+					filePath += ".7z";
+				} else if ( String.format("%02X", ba[0]).equals("1F") && String.format("%02X", ba[1]).equals("8B") ) { // .gz / .tar.gz
+					filePath += ".gz";
+				} else if ( String.format("%02X", ba[0]).equals("FD") && String.format("%02X", ba[1]).equals("37") ) { // .xz / .tar.xz
+					filePath += ".xz";
+				} else {
+					filePath += ".txt";
+				}
+
+				FileOutputStream output = new FileOutputStream(filePath);
+				output.write(ba);
+
+				System.out.println();
+
+				fileWritten = true;
+				output.close();
+
+			} catch (NullPointerException n) {
+				System.out.println("Please enter a valid file location.");
+				continue;
+			} catch (IOException ioe) {
+				System.out.println("Couldn't save the file.");
+				continue;
+			}
+		}
 	}
 
 	public static void main(String[] args) {
@@ -154,7 +219,7 @@ public class Program {
 		// Main Program Loop
 		boolean loop = true;
 		while(loop) {
-			System.out.println("\nPick an operation 1-12. To see the list of operations pick 0. To exit pick 22.");
+			System.out.println("\nPick an operation 1-9. To see the list of operations pick 0. To exit pick 22.");
 			option = -1;
 
 			try {
@@ -170,32 +235,62 @@ public class Program {
 				case 21:
 					dataBytes = new byte[]{};
 					while(dataBytes.length == 0) {
-						dataBytes = selectDataFile();
+						System.out.println("-----\nWould you like to work with a file or text input? Enter 1 for file and 2 for text.");
+						try {
+							inputOption = consoleIn.nextInt();
+						} catch (InputMismatchException e) {
+							System.out.println("Please enter an integer.");
+							consoleIn.next();
+							continue;
+						}
+						if (inputOption == 1) { // File Picker
+							try {
+								dataBytes = selectDataFile();
+							} catch (NullPointerException e) {
+								System.out.println("A file wasn't chosen.");
+								continue;
+							}
+						} else if (inputOption == 2) { // Text was chosen
+							System.out.print("Enter your data: ");
+							consoleIn.nextLine();
+							// Take in new data
+							String rawInput = consoleIn.nextLine();
+							//byte[] inputData = parseData(rawInput);
+							dataBytes = rawInput.getBytes();
+						} else {
+							continue;
+						}
+						continue;
+					}
+					continue;
+
+				case 20:
+					for(int i = 0; i < dataBytes.length; i++) {
+						System.out.print(String.format("%02X ", dataBytes[i]));
 					}
 					continue;
 
 				case 22:
 					loop = false;
+					System.exit(0);
 					break;
 
 				case 0: System.out.println("Options:\n\t0 to see the list of operations.\n"
-						+ "\t1 to compute a plain cryptographic hash of a given file.\n"
-						+ "\t2 to compute a plain cryptographic hash of a text input.\n"
-						+ "\t3 to encrypt a given data file symmetrically under a given passphrase.\n"
-						+ "\t4 to decrypt a given data file symmetrically under a given passphrase.\n"
-						+ "\t5 to compute an authentication tag (MAC) of a given file under a given passphrase.\n"
-						+ "\t6 to generate an elliptic key pair from a given passphrase and write the public key to a file.\n"
-						+ "\t7 to encrypt a data file under a given elliptic public key file.\n"
-						+ "\t8 to decrypt a given elliptic-encrypted file from a given password.\n"
-						+ "\t9 to encrypt text input under a given elliptic public key file.\n"
-						+ "\t10 to decrypt text input from a given password.\n"
-						+ "\t11 to sign a given file from a given password and write the signature to a file.\n"
-						+ "\t12 to verify a given data file and its signature file under a given public key file.\n"
-						+ "\t21 to select a new data file.\n"
+						+ "\t1 to compute a plain cryptographic hash of a given input.\n"
+						+ "\t2 to encrypt a given data input symmetrically under a given passphrase.\n"
+						+ "\t3 to decrypt a given data input symmetrically under a given passphrase.\n"
+						+ "\t4 to compute an authentication tag (MAC) of a given input under a given passphrase.\n"
+						+ "\t5 to generate an elliptic key pair from a given passphrase and write the public key to a file.\n"
+						+ "\t6 to encrypt a data input under a given elliptic public key file.\n"
+						+ "\t7 to decrypt a given elliptic-encrypted input from a given password.\n"
+						+ "\t8 to sign a given input from a given password and write the signature to a file.\n"
+						+ "\t9 to verify a given data file and its signature file under a given public key file.\n"
+						+ "\t20 to display the current input data in bytes.\n"
+						+ "\t21 to select a new data input.\n"
 						+ "\t22 to exit.");
 					continue;
 
-					// compute a plain cryptographic hash of a given file
+					// compute a plain cryptographic hash of a given input
 				case 1:
 					byte[] hash = Envelope.hash(dataBytes);
 
@@ -207,32 +302,8 @@ public class Program {
 
 
 
-					// compute a plain cryptographic hash of a text input.
+					// encrypt given data symmetrically under a given passphrase.
 				case 2:
-
-					System.out.print("Enter your data: ");
-					// Take in new data
-					String rawInput = consoleIn.nextLine();
-					System.out.println();
-					//byte[] inputData = parseData(rawInput);
-					byte[] inputData = rawInput.getBytes();
-					hash = Envelope.hash(inputData);
-
-					for(int i = 0; i < hash.length; i++) {
-						System.out.print(String.format("%02X ", hash[i]));
-					}
-					System.out.println();
-					continue;
-
-
-
-					// encrypt a given data file symmetrically under a given passphrase.
-				case 3:
-					// Uncomment and change dataBytes to inputDatato allow encrypting of text input data.
-//					System.out.print("Enter your data: ");
-//					rawInput = consoleIn.nextLine();
-//					System.out.println();
-//					inputData = parseData(rawInput);
 					System.out.print("Enter your passphrase: ");
 					byte[] pass = consoleIn.nextLine().getBytes();
 					System.out.println();
@@ -254,7 +325,7 @@ public class Program {
 						}
 						w.close();
 						System.out.println();
-						System.out.println("Wrote to Encrypted.txt");
+						System.out.println("Wrote to Encrypted");
 					} catch (IOException e) {
 						System.out.println("Encrypted file not found.");
 						continue;
@@ -262,7 +333,7 @@ public class Program {
 					continue;
 
 					// decrypt a given data file symmetrically under a given passphrase.
-				case 4:
+				case 3:
 					int decryptOption = -1;
 					while(decryptOption == -1) {
 						System.out.println("What would you like to decrypt? Enter 1 for a file, 2 for text input, or 3 for the default Encrypted file.");
@@ -298,6 +369,8 @@ public class Program {
 
 								byte[] decrypted = Envelope.symDecrypt(encData, pass);
 
+								saveFile(decrypted, consoleIn);
+
 								System.out.println("Decrypted Data: ");
 								try {
 									System.out.println(new String(decrypted, "UTF-8"));
@@ -329,6 +402,8 @@ public class Program {
 						byte[] decrypted = Envelope.symDecrypt(encData, pass);
 						System.out.println();
 
+						saveFile(decrypted, consoleIn);
+
 						System.out.println("Decrypted Data: ");
 						try {
 							System.out.println(new String(decrypted, "UTF-8"));
@@ -347,9 +422,7 @@ public class Program {
 
 							byte[] decrypted = Envelope.symDecrypt(encData, pass);
 
-//						for(int i = 0; i < decrypted.length; i++) {
-//							System.out.print(String.format("%02X ", decrypted[i]));
-//						}
+							saveFile(decrypted, consoleIn);
 
 							System.out.println("Decrypted Data: ");
 							try {
@@ -361,15 +434,15 @@ public class Program {
 							sc.close();
 							continue;
 						} catch (FileNotFoundException e) {
-							System.out.println("Couldn't retrieve information from Encrypted.txt");
+							System.out.println("Couldn't retrieve information from Encrypted");
 							continue;
 						}
 					}
 
 
 
-					// compute an authentication tag (MAC) of a given file under a given passphrase.
-				case 5:
+					// compute an authentication tag (MAC) of a given input under a given passphrase.
+				case 4:
 					System.out.print("Enter your passphrase: ");
 					pass = consoleIn.nextLine().getBytes();
 					System.out.println();
@@ -384,7 +457,7 @@ public class Program {
 
 
 					// generate an elliptic key pair from a given passphrase and write the public key to a file.
-				case 6:
+				case 5:
 					System.out.print("Enter your passphrase: ");
 					pass = consoleIn.nextLine().getBytes();
 					System.out.println();
@@ -404,8 +477,8 @@ public class Program {
 
 
 
-					// encrypt a data file under a given elliptic public key file.
-				case 7:
+					// encrypt a data input under a given elliptic public key file.
+				case 6:
 					Point p;
 					try {
 						File file2 = new File(fileName2);
@@ -434,7 +507,7 @@ public class Program {
 							}
 							w.close();
 							System.out.println();
-							System.out.println("Wrote to Encrypted.txt");
+							System.out.println("Wrote to Encrypted");
 						} catch (IOException e) {
 							System.out.println("Encrypted file not found.");
 							continue;
@@ -449,103 +522,117 @@ public class Program {
 
 
 
-					// decrypt a given elliptic-encrypted file from a given password.
-				case 8:
-					// Uncomment to allow decrypting of text input data.
-//					System.out.print("Enter your encrypted data: ");
-//					byte[] encData = parseData(consoleIn.nextLine());
-//					System.out.println();
+					// decrypt a given elliptic-encrypted input from a given password.
+				case 7:
+					decryptOption = -1;
+					while(decryptOption == -1) {
+						System.out.println("What would you like to decrypt? Enter 1 for a file, 2 for text input, or 3 for the default Encrypted file.");
+
+						try {
+							decryptOption = consoleIn.nextInt();
+						} catch (InputMismatchException e) {
+							System.out.println("Please enter an integer.");
+							consoleIn.next();
+							decryptOption = -1;
+							continue;
+						}
+						consoleIn.nextLine();
+					}
+
 					System.out.print("Enter your passphrase: ");
 					pass = consoleIn.nextLine().getBytes();
 					System.out.println();
 
-					try {
-						File file4 = new File(fileName4);
-						Scanner sc = new Scanner(file4);
+					if (decryptOption == 1) {
+						// Select a data file
+						JFileChooser chooser = new JFileChooser();
+						chooser.setCurrentDirectory(new File(System.getProperty("user.dir")));
+						JDialog dialog = new JDialog();
+						int returnVal = chooser.showOpenDialog(dialog);
+						if (returnVal == JFileChooser.APPROVE_OPTION) {
+							File selectedFile = chooser.getSelectedFile();
+							System.out.println("Selected file: " + selectedFile.getAbsolutePath());
+							try {
+								Scanner sc = new Scanner(selectedFile);
 
-						byte[] encData = parseData(sc.nextLine());
+								byte[] encData = parseData(sc.nextLine());
 
+								byte[] decrypted = Envelope.ecDecrypt(encData, pass);
+
+								saveFile(decrypted, consoleIn);
+
+								System.out.println("Decrypted Data: ");
+								try {
+									System.out.println(new String(decrypted, "UTF-8"));
+								} catch (UnsupportedEncodingException e){
+									System.out.println("There was a problem returning your data.");
+								}
+
+								sc.close();
+								continue;
+
+							} catch (NullPointerException e) {
+								System.out.println("Couldn't decrypt file.");
+								decryptOption = -1;
+								continue;
+							} catch (FileNotFoundException f) {
+								System.out.println("Couldn't decrypt file.");
+								decryptOption = -1;
+								continue;
+							}
+						} else {
+							System.out.println("Cancelled");
+						}
+					}
+
+					if (decryptOption == 2) {
+						// Uncomment to allow decrypting of text input data.
+						System.out.print("Enter your encrypted data: ");
+						byte[] encData = parseData(consoleIn.nextLine());
 						byte[] decrypted = Envelope.ecDecrypt(encData, pass);
+						System.out.println();
+
+						saveFile(decrypted, consoleIn);
 
 						System.out.println("Decrypted Data: ");
 						try {
 							System.out.println(new String(decrypted, "UTF-8"));
 						} catch (UnsupportedEncodingException e){
-							System.out.println("");
+							System.out.println("There was a problem returning your data.");
 						}
-//						for(int i = 0; i < decrypted.length; i++) {
-//							System.out.print(String.format("%02X ", decrypted[i]));
-//						}
-
-						sc.close();
-						continue;
-					} catch (FileNotFoundException e) {
-						System.out.println("Couldn't retrieve information from Encrypted.txt");
 						continue;
 					}
 
+					if (decryptOption == 3) {
+						try {
+							File file4 = new File(fileName4);
+							Scanner sc = new Scanner(file4);
 
+							byte[] encData = parseData(sc.nextLine());
 
-					// encrypt text input under a given elliptic public key file.
-				case 9:
-					try {
-						File file2 = new File(fileName2);
-						Scanner sc = new Scanner(file2);
+							byte[] decrypted = Envelope.ecDecrypt(encData, pass);
 
-						BigInteger x = new BigInteger(sc.next());
-						BigInteger y = new BigInteger(sc.next());
+							saveFile(decrypted, consoleIn);
 
-						p = new Point(x, y);
+							System.out.println("Decrypted Data: ");
+							try {
+								System.out.println(new String(decrypted, "UTF-8"));
+							} catch (UnsupportedEncodingException e){
+								System.out.println("There was a problem returning your data.");
+							}
 
-						System.out.print("Enter your data: ");
-						// Take in new data
-						rawInput = consoleIn.nextLine();
-						System.out.println();
-						//inputData = parseData(rawInput);
-						inputData = rawInput.getBytes();
-
-						encrypted = Envelope.ecEncrypt(p, inputData);
-
-						System.out.println("Encrypted Data: ");
-						for(int i = 0; i < encrypted.length; i++) {
-							System.out.print(String.format("%02X ", encrypted[i]));
+							sc.close();
+							continue;
+						} catch (FileNotFoundException e) {
+							System.out.println("Couldn't retrieve information from Encrypted");
+							continue;
 						}
-						System.out.println();
-						sc.close();
-						continue;
-					} catch (FileNotFoundException e) {
-						System.out.println("Couldn't retrieve information from PublicKey");
-						continue;
 					}
-
-
-
-					// decrypt text input from a given password.
-				case 10:
-					System.out.print("Enter your encrypted data: ");
-					byte[] encData = parseData(consoleIn.nextLine());
-					System.out.println();
-					System.out.print("Enter your passphrase: ");
-					pass = consoleIn.nextLine().getBytes();
-					System.out.println();
-					byte[] decrypted = Envelope.ecDecrypt(encData, pass);
-
-					System.out.println("Decrypted Data: ");
-					try {
-						System.out.println(new String(decrypted, "UTF-8"));
-					} catch (UnsupportedEncodingException e){
-						System.out.println("");
-					}
-//					for(int i = 0; i < decrypted.length; i++) {
-//						System.out.print(String.format("%02X ", decrypted[i]));
-//					}
-
-					continue;
 
 
 
 					// sign a given file from a given password and write the signature to a file.
-				case 11:
+				case 8:
 					byte[] signature = Envelope.ecSign(kp.getPrivateKey().toByteArray(), dataBytes);
 
 					System.out.println("Signature: ");
@@ -564,7 +651,7 @@ public class Program {
 						}
 						w.close();
 						System.out.println();
-						System.out.println("Wrote to Signature.txt");
+						System.out.println("Wrote to Signature");
 					} catch (IOException e) {
 						System.out.println("Public Key file not found.");
 						continue;
@@ -574,7 +661,7 @@ public class Program {
 
 
 					// verify a given data file and its signature file under a given public key file.
-				case 12:
+				case 9:
 					try {
 						File file2 = new File(fileName2);
 						Scanner sc = new Scanner(file2);
@@ -603,7 +690,7 @@ public class Program {
 
 
 				default:
-					System.out.println("Please enter a valid integer 0-12.");
+					System.out.println("Please enter a valid integer 0-9.");
 					continue;
 			}
 		}
